// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildOrganizationGroupRelationships should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Group",
      ],
      "_key": "zendesk_group:14930942538780",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "created_at": "2024-07-15T05:55:19Z",
            "default": true,
            "deleted": false,
            "description": "",
            "id": 14930942538780,
            "is_public": true,
            "name": "Support",
            "updated_at": "2024-07-15T05:55:19Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/groups/14930942538780.json",
          },
        },
      ],
      "_type": "zendesk_group",
      "createdAt": "2024-07-15T05:55:19Z",
      "createdOn": undefined,
      "deleted": false,
      "description": "",
      "displayName": "Support",
      "id": "14930942538780",
      "name": "Support",
      "updatedAt": "2024-07-15T05:55:19Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/groups/14930942538780.json",
    },
    {
      "_class": [
        "Organization",
      ],
      "_key": "zendesk_organization:14930942539036",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "created_at": "2024-07-15T05:55:19Z",
            "details": null,
            "domain_names": [],
            "external_id": null,
            "group_id": null,
            "id": 14930942539036,
            "name": "Metron security",
            "notes": null,
            "organization_fields": {},
            "shared_comments": false,
            "shared_tickets": false,
            "tags": [],
            "updated_at": "2024-07-15T05:55:19Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/organizations/14930942539036.json",
          },
        },
      ],
      "_type": "zendesk_organization",
      "createdAt": "2024-07-15T05:55:19Z",
      "createdOn": undefined,
      "details": [],
      "displayName": "Metron security",
      "domainNames": [],
      "groupId": undefined,
      "id": "14930942539036",
      "name": "Metron security",
      "notes": [],
      "sharedComments": false,
      "sharedTickets": false,
      "updatedAt": "2024-07-15T05:55:19Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/organizations/14930942539036.json",
    },
  ],
  "collectedRelationships": [],
  "encounteredTypes": [
    "zendesk_group",
    "zendesk_organization",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 0,
}
`;

exports[`#fetchOrganizations should collect data 1`] = `
{
  "collectedEntities": [
    {
      "_class": [
        "Account",
      ],
      "_key": "zendesk_account:metronsecurity",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "multiproduct": true,
            "name": "Metron security",
            "owner_id": 14930942403996,
            "sandbox": false,
            "subdomain": "metronsecurity",
            "time_format": 24,
            "time_zone": "Asia/Kolkata",
            "url": "https://metronsecurity.zendesk.com",
          },
        },
      ],
      "_type": "zendesk_account",
      "accessURL": "https://metronsecurity.zendesk.com",
      "accountId": "metronsecurity",
      "createdOn": undefined,
      "displayName": "Metron security",
      "name": "Metron security",
    },
    {
      "_class": [
        "Organization",
      ],
      "_key": "zendesk_organization:14930942539036",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "created_at": "2024-07-15T05:55:19Z",
            "details": null,
            "domain_names": [],
            "external_id": null,
            "group_id": null,
            "id": 14930942539036,
            "name": "Metron security",
            "notes": null,
            "organization_fields": {},
            "shared_comments": false,
            "shared_tickets": false,
            "tags": [],
            "updated_at": "2024-07-15T05:55:19Z",
            "url": "https://metronsecurity.zendesk.com/api/v2/organizations/14930942539036.json",
          },
        },
      ],
      "_type": "zendesk_organization",
      "createdAt": "2024-07-15T05:55:19Z",
      "createdOn": undefined,
      "details": [],
      "displayName": "Metron security",
      "domainNames": [],
      "groupId": undefined,
      "id": "14930942539036",
      "name": "Metron security",
      "notes": [],
      "sharedComments": false,
      "sharedTickets": false,
      "updatedAt": "2024-07-15T05:55:19Z",
      "url": "https://metronsecurity.zendesk.com/api/v2/organizations/14930942539036.json",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_account:metronsecurity",
      "_key": "zendesk_account:metronsecurity|has|zendesk_organization:14930942539036",
      "_toEntityKey": "zendesk_organization:14930942539036",
      "_type": "zendesk_account_has_organization",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": [
    "zendesk_account",
    "zendesk_organization",
    "zendesk_account_has_organization",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;
